@@ -1396,8 +1396,7 @@
         <jdk>11</jdk>
       </activation>
       <properties>
-        <testAdditionalRuntimeArgLine>--add-modules
-					java.xml.bind,ALL-MODULE-PATH --add-exports
+        <testAdditionalRuntimeArgLine>--add-exports
 					java.base/sun.nio.ch=ALL-UNNAMED --add-exports
 					java.base/jdk.internal.ref=ALL-UNNAMED --add-exports
 					java.xml/com.sun.org.apache.xml.internal.resolver=ALL-UNNAMED
